favicon and theming

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>My App</title>
+	<link rel="apple-touch-icon" sizes="152x152" href="public/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+	<link rel="manifest" href="public/site.webmanifest">
+	<link rel="mask-icon" href="public/safari-pinned-tab.svg" color="#5e05ca">
+	<meta name="msapplication-TileColor" content="#603cba">
+	<meta name="theme-color" content="#ffffff">
+	<title>Moody</title>
 </head>
 <body>
 	<div id="app">Hi there</div>
